# eatnow

./: README.md  pyproject.toml
backend/: .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json
backend/docs/: openapi.yaml
backend/scripts/: create-topics.sh  test-flow.sh  test-reassignment.sh
backend/src/: app.ts  index.ts
backend/src/config/: index.ts
backend/src/database/: index.ts  migrate.ts  postgres.ts  redis.ts  seed.ts
backend/src/kafka/: client.ts  handlers.ts  index.ts  producer.ts
backend/src/routes/: health.routes.ts  index.ts  order.routes.ts  rider.routes.ts
backend/src/services/: index.ts  matching.service.ts  order.service.ts  rider.service.ts
backend/src/types/: index.ts
backend/tests/: setup.ts
backend/tests/e2e/: health.test.ts  order-flow.test.ts  rider-management.test.ts
backend/tests/fixtures/: test-data.ts
backend/tests/unit/: config.test.ts  utils.test.ts
