[project]
name = "zed-eval"
version = "0.1.0"
description = "Zed Evals Environment Setup"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-dotenv>=1.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
zed-eval = "zed_eval.main:main"
zed-lint = "zed_eval.lint:main"
